tests/error/func_arg_array_empty.gw
// [contains] return array type must be defined with empty \[\]'s
function int[] my_func(int i[2]){}
